--- a/src/pages/inicio/index.scss
+++ b/src/pages/inicio/index.scss
@@ -1,4 +1,12 @@
 .Inicio {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .conteudo-inicio {
+        flex: 1;
+    }
+
     .cabecalho {
         display: flex;
         flex-direction: column;
@@ -18,25 +26,62 @@
             width: 75px;
         }
 
+        
+        
+    }
+
+
+    .links {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        // padding: 0 5%;
     }
 
     .titulo {
-        h1 {}
+        h2 {
+            text-align: center;
+        }
     }
 
     .contado {
         display: flex;
         justify-content: space-between;
-        margin: 60px;
+        margin: 70px;
+
+        .whats{
+            display:flex ;
+        }
+
+        .insta{
+            display:flex ;
+        }
 
         p {}
+
+        .logoWhats{
+            width: 50px;
+            height: 50px;
+        }
+
+        
+        .logoInsta{
+            width: 50px;
+            height: 50px;
+        }
+    }
+
+    .tudo{
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .sessao {
 
-        margin-left: 250px;
-
-        width: 1100px;
+        display: flex;
+        text-align: center;
+        width: 1500px;
         background-color: rgb(243, 243, 243);
 
         p {
@@ -81,5 +126,30 @@
             background-color: grey;
             margin-top: 100px;
         }
+    }
+
+    .rodaPe{
+        position: relative;
+        bottom: 0;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #f3f3f3;
+        // height: 110PX;
+
+
+        h1 {
+            margin: 0px;
+            background: linear-gradient(90deg, #f8ff1ef0, #01a6ff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: 40px;
+        }
+
+        .logo {
+            width: 75px;
+        }
+
     }
 }
