--- a/src/pages/Sobre/index.scss
+++ b/src/pages/Sobre/index.scss
@@ -46,9 +46,13 @@
 
         .insta{
             display:flex ;
+
         }
 
-        p {}
+        p {
+            color: black;
+        }
+        
 
         .logoWhats{
             width: 50px;
@@ -63,15 +67,18 @@
 
     }
 
+
     .titulo{
         text-align: center;
         margin-top: 90px;
+        margin-bottom: 90px;
         
     }
     .repertorio{
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+
         .card1{
           
             border-radius: 20px;
@@ -82,6 +89,11 @@
             -webkit-text-fill-color: transparent;
             box-shadow: 0 4px 8px rgba(0, 0, 0,);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                scale: 110%;
+                transition: 0.7s;
+                }
 
             .card1:hover {
                 transform: translateY(-10px); /* Sobe 10px ao passar o mouse */
@@ -106,7 +118,14 @@
             text-align: center;
             background-image: linear-gradient(to top, #4ECAFF, #fdfdfd);
             -webkit-background-clip: se;
+
+            &:hover {
+                scale: 110%;
+                transition: 0.7s;
+                }
+
             -webkit-text-fill-color: transparent
+
 
              h2{
                 text-align: center;
@@ -129,6 +148,12 @@
             text-align: center;
             background-image: linear-gradient(to top, #81FF71, #fdfdfd);
             -webkit-background-clip: se;
+
+            &:hover {
+                scale: 110%;
+                transition: 0.7s;
+                }
+
             -webkit-text-fill-color: transparent;
     
             h2{
@@ -158,6 +183,10 @@
             text-align: center;
             background-image: linear-gradient(to top, #1668FF, #fdfdfd);
             -webkit-background-clip: se;
+            &:hover {
+                scale: 110%;
+                transition: 0.7s;
+                }
             -webkit-text-fill-color: transparent;
     
             h2{
@@ -177,6 +206,10 @@
             text-align: center;
             background-image: linear-gradient(to top, #FF8737, #fdfdfd);
             -webkit-background-clip: se;
+            &:hover {
+                scale: 110%;
+                transition: 0.7s;
+                }
             -webkit-text-fill-color: transparent;
     
             h2{
