--- a/src/pages/inicio/index.scss
+++ b/src/pages/inicio/index.scss
@@ -34,7 +34,9 @@
     .links {
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
+       justify-content: space-evenly;
+        margin-left : 30px;
+        gap: 40px;
         // padding: 0 5%;
         font-size: 25px;
         color: rgb(0, 0, 0);
@@ -43,6 +45,7 @@
     .titulo {
         h2 {
             text-align: center;
+            font-size: 34px;
         }
     }
 
