--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -21,10 +21,12 @@
     .links{
         display: flex;
         align-items: center;
-        margin: 30px;
+        margin: 20px;
         justify-content: space-evenly;
         width: 100%;
+        font-size: 25px;
+        color: black;
     }
     
-
+    
 }
