--- a/src/components/cabecalho/index.scss
+++ b/src/components/cabecalho/index.scss
@@ -1,30 +1,36 @@
-.cabecalho{
+
+.cabecalho {
 
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #f3f3f3;
     height: 110PX;
-    justify-content: space-between;         
+   
 
-    h1{
+    h1 {
         margin: 0px;
-        background: linear-gradient(90deg, #f8ff1ef0, #01a6ff); /* Altere as cores conforme necessário */
+        background: linear-gradient(90deg, #f8ff1ef0, #01a6ff);
+        
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-size: 40px;
     }
-    .logo{
+
+    .logo {
         width: 75px;
     }
 
-    .links{
+    .links {
         display: flex;
         align-items: center;
+
+     
         margin: 30px;
         justify-content: space-evenly;
         width: 100%;
+        font-size: 25px;
+        color: black;
     }
-    
 
 }
