--- a/src/pages/Sobre/index.scss
+++ b/src/pages/Sobre/index.scss
@@ -13,8 +13,7 @@
         h1{
             margin: 0px;
             background: linear-gradient(90deg, #f8ff1ef0, #01a6ff); /* Altere as cores conforme necessário */
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+           
             font-size: 40px;
         }
         .logo{
@@ -85,7 +84,7 @@
             width: 300px;
             text-align: center;
             background-image: linear-gradient(to top, #F2FF7D, #fdfdfd);
-            -webkit-background-clip: se;
+          
             -webkit-text-fill-color: transparent;
             box-shadow: 0 4px 8px rgba(0, 0, 0,);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -117,8 +116,7 @@
             width: 300px;
             text-align: center;
             background-image: linear-gradient(to top, #4ECAFF, #fdfdfd);
-            -webkit-background-clip: se;
-
+           
             &:hover {
                 scale: 110%;
                 transition: 0.7s;
@@ -147,7 +145,7 @@
             width: 300px;
             text-align: center;
             background-image: linear-gradient(to top, #81FF71, #fdfdfd);
-            -webkit-background-clip: se;
+          
 
             &:hover {
                 scale: 110%;
@@ -182,7 +180,7 @@
             width: 300px;
             text-align: center;
             background-image: linear-gradient(to top, #1668FF, #fdfdfd);
-            -webkit-background-clip: se;
+          
             &:hover {
                 scale: 110%;
                 transition: 0.7s;
@@ -205,7 +203,7 @@
             width: 300px;
             text-align: center;
             background-image: linear-gradient(to top, #FF8737, #fdfdfd);
-            -webkit-background-clip: se;
+          
             &:hover {
                 scale: 110%;
                 transition: 0.7s;
@@ -224,5 +222,29 @@
     }
 
 
+    @media (max-width: 768px) {
+        .cabecalho {
+            height: auto; 
+        }
 
+        .contado {  
+            flex-direction: column; 
+            align-items: center;
+            margin: 20px; 
+        }
+
+        .titulo {
+            margin: 40px 0; 
+        }
+
+        .repertorio {
+            flex-direction: column; 
+            align-items: center; 
+        }
+
+        .card1, .card2, .card3, .card4, .card5 {
+            width: 90%;
+            margin-bottom: 20px; 
+        }
+    }
 }
