--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -30,6 +30,7 @@ body{
         height: 500px;
         opacity: 70%;
         text-align: center;
+        margin-bottom: 60px;
 
         .inputs{
             display: flex;
@@ -47,4 +48,18 @@ body{
 
         }
     }
+
+    
+// Media Queries for Responsiveness
+@media (max-width: 600px) {
+    .container {
+        margin-top: 100px; // Reduce margin on smaller screens
+        width: 90%; // Full width on smaller screens
+        padding: 15px; // Adjust padding for smaller screens
+    }
+
+    .botao {
+        max-width: 80%; // Wider button on smaller screens
+    }
+}
 }
